--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5d03bca4-7ff2-4035-bba3-1df225aa201e",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "97d7fb70-a0dc-45cb-b39e-30cfe821d0a8",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "[180000 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "61ab02ae-c221-4c5a-8f05-77f922959383",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "1  class 2     0.896795      [0.125, 0.25]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "08205f69-3471-4f3b-85eb-ef423cab4e1b",
    "metadata": {},
    "outputs": [
@@ -513,12 +513,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-c1d535efa5794032a2eae3ac9977b79d\"></div>\n",
+       "<div id=\"altair-viz-d407c5595d304eb48fdeaa494d9e8aba\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-c1d535efa5794032a2eae3ac9977b79d\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-c1d535efa5794032a2eae3ac9977b79d\");\n",
+       "    if (outputDiv.id !== \"altair-viz-d407c5595d304eb48fdeaa494d9e8aba\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-d407c5595d304eb48fdeaa494d9e8aba\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -567,19 +567,21 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alt.Chart(all_corrs).mark_bar().encode(\n",
+    "chart = alt.Chart(all_corrs).mark_bar().encode(\n",
     "    x= alt.X('num_concentrations:O', axis=alt.Axis(labels=False), sort=alt.EncodingSortField('x', order='descending')),\n",
     "    y='correlation:Q',\n",
     "    color=alt.Color('num_concentrations:N', sort=alt.EncodingSortField('color', order='descending')),\n",
     "    column='epitope:N',\n",
     "    tooltip = ['num_concentrations', 'correlation']\n",
-    ").properties(width=125, height=200)"
+    ").properties(width=125, height=200)\n",
+    "chart.save('scipy_results/figures/concentrations_exp1.pdf')\n",
+    "chart"
    ]
   },
   {
@@ -730,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "0a33f59d-b187-4ba6-a2ed-b885277f01ee",
    "metadata": {},
    "outputs": [
@@ -804,7 +806,7 @@
        "1  class 2     0.963036             [2, 1]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "1c69d465-1f7e-4ff0-8fb4-f89fe7020c4f",
    "metadata": {},
    "outputs": [
@@ -852,12 +854,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-85bd53bf6b9b4ef886fbc31bf460907a\"></div>\n",
+       "<div id=\"altair-viz-b6fa9e9ed14e41889dbee89962a10523\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-85bd53bf6b9b4ef886fbc31bf460907a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-85bd53bf6b9b4ef886fbc31bf460907a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-b6fa9e9ed14e41889dbee89962a10523\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-b6fa9e9ed14e41889dbee89962a10523\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -906,19 +908,21 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alt.Chart(all_corrs).mark_bar().encode(\n",
+    "chart = alt.Chart(all_corrs).mark_bar().encode(\n",
     "    x= alt.X('num_concentrations:O', axis=alt.Axis(labels=False), sort=alt.EncodingSortField('x', order='descending')),\n",
     "    y='correlation:Q',\n",
     "    color=alt.Color('num_concentrations:N', sort=alt.EncodingSortField('color', order='descending')),\n",
     "    column='epitope:N',\n",
     "    tooltip = ['num_concentrations', 'correlation']\n",
-    ").properties(width=125, height=200)"
+    ").properties(width=125, height=200)\n",
+    "chart.save('scipy_results/figures/concentrations_exp2.pdf')\n",
+    "chart"
    ]
   },
   {
@@ -1238,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "c6b57efa-743c-46da-b3a8-bebeff9470bd",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1316,7 @@
        "1  class 2     0.971332          [0.25, 4]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "7700a5e4-2194-4549-829d-0da094132846",
    "metadata": {},
    "outputs": [
@@ -1367,12 +1371,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-dcb1e250076c414fb005b6a5362c83d3\"></div>\n",
+       "<div id=\"altair-viz-aa6ab92b73d54caead2f88589423f417\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-dcb1e250076c414fb005b6a5362c83d3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-dcb1e250076c414fb005b6a5362c83d3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-aa6ab92b73d54caead2f88589423f417\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-aa6ab92b73d54caead2f88589423f417\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -1421,19 +1425,21 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alt.Chart(all_corrs).mark_bar().encode(\n",
+    "chart = alt.Chart(all_corrs).mark_bar().encode(\n",
     "    x= alt.X('num_concentrations:O', axis=alt.Axis(labels=False), sort=alt.EncodingSortField('x', order='descending')),\n",
     "    y='correlation:Q',\n",
     "    color=alt.Color('num_concentrations:N', sort=alt.EncodingSortField('color', order='descending')),\n",
     "    column='epitope:N',\n",
     "    tooltip = ['num_concentrations', 'correlation']\n",
-    ").properties(width=125, height=200)"
+    ").properties(width=125, height=200)\n",
+    "chart.save('scipy_results/figures/concentrations_best.pdf')\n",
+    "chart"
    ]
   },
   {
