--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -418,6 +418,7 @@
     }
    ],
    "source": [
+    "library_sizes = [1000, 5000, 10000, 20000, 30000]\n",
     "all_corrs = pd.DataFrame({'epitope' : [], \n",
     "                          'correlation' : [], \n",
     "                          'num_variants' : []}\n",
@@ -451,19 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-39aa12233820485abfa58463289548bc\"></div>\n",
+       "<div id=\"altair-viz-9b47f8e1733e4134b93eb9597e6e8879\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-39aa12233820485abfa58463289548bc\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-39aa12233820485abfa58463289548bc\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9b47f8e1733e4134b93eb9597e6e8879\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9b47f8e1733e4134b93eb9597e6e8879\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -512,7 +513,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +526,9 @@
     "    tooltip=['num_variants', 'correlation', 'epitope']\n",
     ")\n",
     "\n",
-    "base + base.transform_loess('num_variants', 'correlation', groupby=['epitope']).mark_line(size=2.5)"
+    "chart = base + base.transform_loess('num_variants', 'correlation', groupby=['epitope']).mark_line(size=2.5)\n",
+    "chart.save('scipy_results/figures/library_size.pdf')\n",
+    "chart"
    ]
   }
  ],
