--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "[360000 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "1  class 2     0.956589  avg2muts"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,78 +427,17 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"altair-viz-ed4301e900144c8386aded466099cb74\"></div>\n",
-       "<script type=\"text/javascript\">\n",
-       "  (function(spec, embedOpt){\n",
-       "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-ed4301e900144c8386aded466099cb74\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-ed4301e900144c8386aded466099cb74\");\n",
-       "    }\n",
-       "    const paths = {\n",
-       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
-       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
-       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
-       "    };\n",
-       "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
-       "    }\n",
-       "\n",
-       "    function showError(err) {\n",
-       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-       "      throw err;\n",
-       "    }\n",
-       "\n",
-       "    function displayChart(vegaEmbed) {\n",
-       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-       "    }\n",
-       "\n",
-       "    if(typeof define === \"function\" && define.amd) {\n",
-       "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
-       "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
-       "        .catch(showError)\n",
-       "        .then(() => displayChart(vegaEmbed));\n",
-       "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-4c0e30f2db9d737536d5f1f13e972684\"}, \"mark\": \"bar\", \"encoding\": {\"color\": {\"field\": \"library\", \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"library\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"type\": \"quantitative\"}], \"x\": {\"axis\": {\"labels\": false}, \"field\": \"library\", \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"height\": 200, \"width\": 125, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-4c0e30f2db9d737536d5f1f13e972684\": [{\"epitope\": \"class 1\", \"correlation\": 0.12796044398108936, \"library\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation\": 0.857028982577385, \"library\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation\": 0.6538580166192145, \"library\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8124616185199585, \"library\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9565890154532138, \"library\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation\": 0.928755819226252, \"library\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8828352439294088, \"library\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9729747874088035, \"library\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation\": 0.94969585001127, \"library\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8896793775467687, \"library\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9693371499510837, \"library\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation\": 0.9592697463846838, \"library\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "alt.Chart(...)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "alt.Chart(all_corrs).mark_bar().encode(\n",
+    "chart = alt.Chart(all_corrs).mark_bar().encode(\n",
     "    x= alt.X('library:O', axis=alt.Axis(labels=False)),\n",
     "    y='correlation:Q',\n",
     "    color='library:N',\n",
     "    column='epitope:N',\n",
     "    tooltip = ['library', 'correlation']\n",
-    ").properties(width=125, height=200)"
+    ").properties(width=125, height=200)\n",
+    "chart.save('scipy_results/figures/mutation_rate.pdf')\n",
+    "chart"
    ]
   },
   {
