remove error in test notebook

--- a/tests/test_variant_filtering.ipynb
+++ b/tests/test_variant_filtering.ipynb
@@ -5,12 +5,12 @@
    "id": "a753a0b7-5d6a-4673-bd19-97682e3584c9",
    "metadata": {},
    "source": [
-    "# Test ICXX prediction"
+    "# Test variant filtering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "955499bc-a6ee-48e1-a078-269f61208fdd",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "d7ae3d0f-f62f-4c9d-ad18-ca2ef0a09c27",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "5    var6              M1A            1.0          0.6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "13223dfd-27b2-4d01-b14b-155164546852",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "('M1A', 'G2A', 'G2C')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "b36fc682-d548-4cdc-b12c-b0981de1f1f3",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "6    var7              G2C            1.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "ee4a65e1-c105-471e-b44f-931f931bc3d1",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "('M1A', 'G2A', 'G2C', 'M1C')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "f32d48ed-39cf-40fc-aa4f-e19662da2b6f",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "4    var7              G2C            1.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,18 +655,18 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 504 parameters at Fri Dec  3 09:37:44 2021.\n",
+      "# Starting optimization of 504 parameters at Fri Dec  3 15:43:15 2021.\n",
       "       step   time_sec       loss   fit_loss reg_escape  regspread\n",
-      "          0  0.0093493     308.37     308.07    0.29701          0\n",
-      "        500     4.3117     21.298     16.412     4.8862          0\n",
-      "       1000     8.5302      20.62      15.47     5.1501          0\n",
-      "       1038     8.8471      20.62     15.472     5.1484          0\n",
-      "# Successfully finished at Fri Dec  3 09:37:53 2021.\n",
-      "# Starting optimization of 4659 parameters at Fri Dec  3 09:37:53 2021.\n",
+      "          0  0.0099931     308.37     308.07    0.29701          0\n",
+      "        500     4.6128     21.298     16.412     4.8862          0\n",
+      "       1000     9.4118      20.62      15.47     5.1501          0\n",
+      "       1038      9.749      20.62     15.472     5.1484          0\n",
+      "# Successfully finished at Fri Dec  3 15:43:25 2021.\n",
+      "# Starting optimization of 4659 parameters at Fri Dec  3 15:43:25 2021.\n",
       "       step   time_sec       loss   fit_loss reg_escape  regspread\n",
-      "          0  0.0093873     67.751     15.733     52.018 8.2874e-30\n",
-      "        427     4.2017      19.25     5.4251     9.9417     3.8831\n",
-      "# Successfully finished at Fri Dec  3 09:37:57 2021.\n"
+      "          0   0.009223     67.751     15.733     52.018 8.2874e-30\n",
+      "        427     4.2811      19.25     5.4251     9.9417     3.8831\n",
+      "# Successfully finished at Fri Dec  3 15:43:29 2021.\n"
      ]
     }
    ],
@@ -864,47 +864,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b96d603-824d-4c06-ba81-b20c77e9abad",
-   "metadata": {},
-   "source": [
-    "If we try and predict the IC90's for the new data right now, it'll throw an error."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c096bdf4-b22a-4912-bdbf-f80b8148b063",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "substitutions not in `allowed_subs`: ['A344E', 'A344N', 'A348D', 'A348H', 'A348N', 'A348P', 'A348Y', 'A352D', 'A352E', 'A352H', 'A352Q', 'A363F', 'A363I', 'A363M', 'A363W', 'A363Y', 'A372D', 'A372K', 'A372M', 'A411Q', 'A475F', 'A475K', 'A475N', 'A475Q', 'A520C', 'A522C', 'A522K', 'A522M', 'A522V', 'C336G', 'C361N', 'C361P', 'C391D', 'C391N', 'C391Y', 'D389W', 'D420E', 'D420K', 'D420M', 'D427M', 'D427N', 'D427W', 'D427Y', 'D428K', 'E340M', 'E340N', 'E340P', 'E340Q', 'E406D', 'E406W', 'E465H', 'E471F', 'E471K', 'E471Q', 'E484K', 'E484N', 'F338I', 'F338L', 'F338M', 'F338W', 'F338Y', 'F342I', 'F374N', 'F374Q', 'F374W', 'F374Y', 'F377M', 'F377W', 'F392C', 'F392I', 'F392M', 'F392N', 'F429W', 'F456G', 'F456W', 'F464A', 'F464M', 'F464W', 'F464Y', 'F486C', 'F486K', 'F486M', 'F490E', 'F490Q', 'F490W', 'G339F', 'G339H', 'G339K', 'G381K', 'G413F', 'G413H', 'G413Q', 'G446C', 'G446F', 'G446K', 'G446W', 'G447F', 'G447H', 'G447N', 'G447Y', 'G482H', 'G482N', 'G496E', 'G496N', 'G496Q', 'G504E', 'G504F', 'G504N', 'G526S', 'I332G', 'I332H', 'I332N', 'I332Q', 'I332R', 'I332S', 'I332T', 'I358V', 'I358W', 'I358Y', 'I410V', 'I468D', 'I468M', 'I472C', 'I472D', 'I472E', 'I472M', 'I472Q', 'K356E', 'K356Q', 'K356T', 'K356V', 'K378E', 'K378T', 'K378V', 'K386C', 'K386E', 'K386H', 'K386Q', 'K417H', 'K417T', 'K417W', 'K417Y', 'K444D', 'K444H', 'K444W', 'K458M', 'K458Q', 'K458W', 'K462D', 'K462E', 'K462F', 'K462H', 'K462V', 'K528A', 'K528C', 'K528V', 'K528W', 'K528Y', 'K529D', 'K529I', 'K529M', 'K529R', 'L335F', 'L335G', 'L335I', 'L335M', 'L335Q', 'L387I', 'L387M', 'L390A', 'L390C', 'L390N', 'L390Q', 'L390W', 'L425I', 'L425M', 'L441Q', 'L452K', 'L452M', 'L452W', 'L517E', 'L517Y', 'L518K', 'N331K', 'N331Q', 'N331R', 'N331T', 'N331V', 'N334C', 'N334D', 'N334G', 'N334H', 'N334Q', 'N334Y', 'N354D', 'N354T', 'N370D', 'N370E', 'N388E', 'N388H', 'N394C', 'N394F', 'N394M', 'N394P', 'N394Q', 'N394W', 'N439Y', 'N440C', 'N440F', 'N440K', 'N440M', 'N450C', 'N450M', 'N460E', 'N460H', 'N460P', 'N460V', 'N460Y', 'N481F', 'N481K', 'N481M', 'N487A', 'N487H', 'N487Y', 'N501M', 'P337C', 'P337E', 'P337M', 'P337S', 'P384A', 'P384F', 'P384I', 'P384M', 'P384W', 'P479C', 'P479T', 'P479Y', 'P521C', 'P521H', 'P527F', 'P527M', 'Q414C', 'Q474K', 'Q474M', 'Q493K', 'Q493N', 'Q493W', 'Q498A', 'Q498C', 'Q498E', 'Q498F', 'Q498H', 'Q498W', 'Q506E', 'Q506H', 'R346H', 'R346M', 'R346Q', 'R346V', 'R346W', 'R346Y', 'R357H', 'R357T', 'R357Y', 'R408C', 'R408F', 'R408W', 'S359I', 'S359K', 'S359N', 'S359P', 'S359V', 'S359W', 'S366F', 'S366G', 'S366H', 'S366M', 'S371F', 'S371I', 'S371T', 'S371W', 'S373D', 'S373M', 'S373P', 'S373Q', 'S373R', 'S373W', 'S383D', 'S383H', 'S383M', 'S383Q', 'S383V', 'S383Y', 'S459H', 'S459Y', 'S469K', 'S469N', 'S469Q', 'S477C', 'S477H', 'S477W', 'S494N', 'S494W', 'S514H', 'S514I', 'S514W', 'S514Y', 'S530E', 'S530K', 'S530Y', 'T333M', 'T333W', 'T376C', 'T376M', 'T376N', 'T385K', 'T385M', 'T385Q', 'T385W', 'T385Y', 'T393D', 'T393M', 'T393Y', 'T430N', 'T470M', 'T470Q', 'T478K', 'T500D', 'T500F', 'T500H', 'T500M', 'T500W', 'T531F', 'T531Y', 'V362E', 'V362I', 'V362K', 'V362M', 'V362Y', 'V367C', 'V367D', 'V367F', 'V367M', 'V367S', 'V367T', 'V367W', 'V367Y', 'V395M', 'V445E', 'V445K', 'V445W', 'V483K', 'V483Y', 'V503C', 'V503M', 'V503W', 'Y351W', 'Y365C', 'Y365M', 'Y365V', 'Y365W', 'Y369G', 'Y369H', 'Y369I', 'Y369M', 'Y396M', 'Y396W', 'Y449M', 'Y449Q', 'Y449T', 'Y449W', 'Y451H', 'Y451M', 'Y473H', 'Y473N', 'Y489W', 'Y505N', 'Y505W', 'Y508A', 'Y508M']",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_53251/1290306647.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m          )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mic90s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoly_abs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0micXX\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mic90s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'predicted_IC90'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_c\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_ic90\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/fh/fast/bloom_j/computational_notebooks/tyu2/2021/polyclonal/polyclonal/polyclonal.py\u001b[0m in \u001b[0;36micXX\u001b[0;34m(self, variants_df, x, col, min_c, max_c)\u001b[0m\n\u001b[1;32m   1473\u001b[0m         \u001b[0mreduced_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvariants_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'aa_substitutions'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_duplicates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1474\u001b[0m         \u001b[0mbmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_binarymap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduced_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1475\u001b[0;31m         \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_a_beta_from_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1476\u001b[0m         \u001b[0mexp_phi_e_v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbmap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbinary_variants\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1477\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mexp_phi_e_v\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbmap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnvariants\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepitopes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/fh/fast/bloom_j/computational_notebooks/tyu2/2021/polyclonal/polyclonal/polyclonal.py\u001b[0m in \u001b[0;36m_get_binarymap\u001b[0;34m(self, variants_df)\u001b[0m\n\u001b[1;32m   1629\u001b[0m         \u001b[0;34m\"\"\"Get ``BinaryMap`` appropriate for use.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1630\u001b[0m         bmap = binarymap.BinaryMap(\n\u001b[0;32m-> 1631\u001b[0;31m                 \u001b[0mvariants_df\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1632\u001b[0m                 \u001b[0msubstitutions_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'aa_substitutions'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1633\u001b[0m                 \u001b[0mallowed_subs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmutations\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/binarymap-0.3-py3.9.egg/binarymap/binarymap.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, func_scores_df, substitutions_col, func_score_col, func_score_var_col, n_pre_col, n_post_col, cols_optional, alphabet, allowed_subs, expand, wtseq)\u001b[0m\n\u001b[1;32m    401\u001b[0m             \u001b[0mextra_subs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubs_in_variants\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mallowed_subs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    402\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mextra_subs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 403\u001b[0;31m                 raise ValueError('substitutions not in `allowed_subs`: '\n\u001b[0m\u001b[1;32m    404\u001b[0m                                  f\"{extra_subs}\")\n\u001b[1;32m    405\u001b[0m             \u001b[0msubs_in_variants\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mallowed_subs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: substitutions not in `allowed_subs`: ['A344E', 'A344N', 'A348D', 'A348H', 'A348N', 'A348P', 'A348Y', 'A352D', 'A352E', 'A352H', 'A352Q', 'A363F', 'A363I', 'A363M', 'A363W', 'A363Y', 'A372D', 'A372K', 'A372M', 'A411Q', 'A475F', 'A475K', 'A475N', 'A475Q', 'A520C', 'A522C', 'A522K', 'A522M', 'A522V', 'C336G', 'C361N', 'C361P', 'C391D', 'C391N', 'C391Y', 'D389W', 'D420E', 'D420K', 'D420M', 'D427M', 'D427N', 'D427W', 'D427Y', 'D428K', 'E340M', 'E340N', 'E340P', 'E340Q', 'E406D', 'E406W', 'E465H', 'E471F', 'E471K', 'E471Q', 'E484K', 'E484N', 'F338I', 'F338L', 'F338M', 'F338W', 'F338Y', 'F342I', 'F374N', 'F374Q', 'F374W', 'F374Y', 'F377M', 'F377W', 'F392C', 'F392I', 'F392M', 'F392N', 'F429W', 'F456G', 'F456W', 'F464A', 'F464M', 'F464W', 'F464Y', 'F486C', 'F486K', 'F486M', 'F490E', 'F490Q', 'F490W', 'G339F', 'G339H', 'G339K', 'G381K', 'G413F', 'G413H', 'G413Q', 'G446C', 'G446F', 'G446K', 'G446W', 'G447F', 'G447H', 'G447N', 'G447Y', 'G482H', 'G482N', 'G496E', 'G496N', 'G496Q', 'G504E', 'G504F', 'G504N', 'G526S', 'I332G', 'I332H', 'I332N', 'I332Q', 'I332R', 'I332S', 'I332T', 'I358V', 'I358W', 'I358Y', 'I410V', 'I468D', 'I468M', 'I472C', 'I472D', 'I472E', 'I472M', 'I472Q', 'K356E', 'K356Q', 'K356T', 'K356V', 'K378E', 'K378T', 'K378V', 'K386C', 'K386E', 'K386H', 'K386Q', 'K417H', 'K417T', 'K417W', 'K417Y', 'K444D', 'K444H', 'K444W', 'K458M', 'K458Q', 'K458W', 'K462D', 'K462E', 'K462F', 'K462H', 'K462V', 'K528A', 'K528C', 'K528V', 'K528W', 'K528Y', 'K529D', 'K529I', 'K529M', 'K529R', 'L335F', 'L335G', 'L335I', 'L335M', 'L335Q', 'L387I', 'L387M', 'L390A', 'L390C', 'L390N', 'L390Q', 'L390W', 'L425I', 'L425M', 'L441Q', 'L452K', 'L452M', 'L452W', 'L517E', 'L517Y', 'L518K', 'N331K', 'N331Q', 'N331R', 'N331T', 'N331V', 'N334C', 'N334D', 'N334G', 'N334H', 'N334Q', 'N334Y', 'N354D', 'N354T', 'N370D', 'N370E', 'N388E', 'N388H', 'N394C', 'N394F', 'N394M', 'N394P', 'N394Q', 'N394W', 'N439Y', 'N440C', 'N440F', 'N440K', 'N440M', 'N450C', 'N450M', 'N460E', 'N460H', 'N460P', 'N460V', 'N460Y', 'N481F', 'N481K', 'N481M', 'N487A', 'N487H', 'N487Y', 'N501M', 'P337C', 'P337E', 'P337M', 'P337S', 'P384A', 'P384F', 'P384I', 'P384M', 'P384W', 'P479C', 'P479T', 'P479Y', 'P521C', 'P521H', 'P527F', 'P527M', 'Q414C', 'Q474K', 'Q474M', 'Q493K', 'Q493N', 'Q493W', 'Q498A', 'Q498C', 'Q498E', 'Q498F', 'Q498H', 'Q498W', 'Q506E', 'Q506H', 'R346H', 'R346M', 'R346Q', 'R346V', 'R346W', 'R346Y', 'R357H', 'R357T', 'R357Y', 'R408C', 'R408F', 'R408W', 'S359I', 'S359K', 'S359N', 'S359P', 'S359V', 'S359W', 'S366F', 'S366G', 'S366H', 'S366M', 'S371F', 'S371I', 'S371T', 'S371W', 'S373D', 'S373M', 'S373P', 'S373Q', 'S373R', 'S373W', 'S383D', 'S383H', 'S383M', 'S383Q', 'S383V', 'S383Y', 'S459H', 'S459Y', 'S469K', 'S469N', 'S469Q', 'S477C', 'S477H', 'S477W', 'S494N', 'S494W', 'S514H', 'S514I', 'S514W', 'S514Y', 'S530E', 'S530K', 'S530Y', 'T333M', 'T333W', 'T376C', 'T376M', 'T376N', 'T385K', 'T385M', 'T385Q', 'T385W', 'T385Y', 'T393D', 'T393M', 'T393Y', 'T430N', 'T470M', 'T470Q', 'T478K', 'T500D', 'T500F', 'T500H', 'T500M', 'T500W', 'T531F', 'T531Y', 'V362E', 'V362I', 'V362K', 'V362M', 'V362Y', 'V367C', 'V367D', 'V367F', 'V367M', 'V367S', 'V367T', 'V367W', 'V367Y', 'V395M', 'V445E', 'V445K', 'V445W', 'V483K', 'V483Y', 'V503C', 'V503M', 'V503W', 'Y351W', 'Y365C', 'Y365M', 'Y365V', 'Y365W', 'Y369G', 'Y369H', 'Y369I', 'Y369M', 'Y396M', 'Y396W', 'Y449M', 'Y449Q', 'Y449T', 'Y449W', 'Y451H', 'Y451M', 'Y473H', 'Y473N', 'Y489W', 'Y505N', 'Y505W', 'Y508A', 'Y508M']"
-     ]
-    }
-   ],
-   "source": [
-    "max_ic90 = 50\n",
-    "\n",
-    "# we only need the variants, not the concentration for the IC90 comparison\n",
-    "ic90s = (exact_data[['aa_substitutions', 'IC90']]\n",
-    "         .assign(IC90=lambda x: x['IC90'].clip(upper=max_ic90))\n",
-    "         .drop_duplicates()\n",
-    "         )\n",
-    "\n",
-    "ic90s = poly_abs.icXX(ic90s, x=0.9, col='predicted_IC90', max_c=max_ic90)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fdb4db14-9896-4e5f-8135-bc42382b6d8b",
    "metadata": {},
    "source": [
@@ -913,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c9f9b4f4-7615-45aa-9cc9-fb230f42e37a",
    "metadata": {},
    "outputs": [
@@ -1032,7 +991,7 @@
        "[16296 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "bbafb86f-ee9e-491c-b13a-0a39859fc1b8",
    "metadata": {},
    "outputs": [],
