remove unused libraries

--- a/tests/test_variant_filtering.ipynb
+++ b/tests/test_variant_filtering.ipynb
@@ -16,11 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import polyclonal\n",
-    "import random\n",
-    "import numpy\n",
-    "import itertools\n",
-    "import collections"
+    "import polyclonal"
    ]
   },
   {
@@ -334,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f32d48ed-39cf-40fc-aa4f-e19662da2b6f",
    "metadata": {},
    "outputs": [
@@ -408,7 +404,7 @@
        "4    var7              G2C            1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "b4aa8fea-d9b0-46b1-b5bd-1b91bf625fc5",
    "metadata": {},
    "outputs": [],
