add nbval_ignore_output for altair

--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -393,6 +393,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "chart = alt.Chart(all_corrs).mark_bar().encode(\n",
     "    x= alt.X('conc_set:O', axis=alt.Axis(labels=False), \n",
     "             sort=alt.EncodingSortField('x', order='descending')),\n",
@@ -551,6 +552,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "chart = alt.Chart(ic90_corrs).mark_bar().encode(\n",
     "    x= alt.X('conc_set:O', axis=alt.Axis(labels=False), \n",
     "             sort=alt.EncodingSortField('x', order='descending')),\n",
@@ -812,6 +814,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "chart = alt.Chart(all_corrs).mark_bar().encode(\n",
     "    x= alt.X('conc_set:O', axis=alt.Axis(labels=False), \n",
     "             sort=alt.EncodingSortField('x', order='descending')),\n",
@@ -950,6 +953,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "chart = alt.Chart(ic90_corrs).mark_bar().encode(\n",
     "    x= alt.X('conc_set:O', axis=alt.Axis(labels=False), \n",
     "             sort=alt.EncodingSortField('x', order='descending')),\n",
